# multipong

./: Cargo.toml  game.proto
src/: client.rs  server.rs
