[package]
name = "new_pong"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
bevy = "0.14.2"
futures = "0.3.31"
prost = "0.13.3"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.11"
